<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meowing Kitty</string>
    <string name="action_settings">Settings</string>
    <string name="puppies">Puppies :D</string>
    <string name="rawr">Rawr!</string>
    <string name="title_activity_puppy_info">PuppyInfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="sleepy">Moar Puppies!</string>
    <string name="info">Info</string>
    <string name="title_activity_sleepy">SleepyActivity</string>
    <string name="home">Home</string>

</resources>
